Lavet mer tekst og breakpoints
Lavet mer tekst om mig
Breakpoints af siden

--- a/aboutme.html
+++ b/aboutme.html
@@ -96,8 +96,9 @@
 
     <section class="about-me-tekst">
         <div class="a-m-e">
-            <p><strong>Uddannelse</strong></p>
+            <p><strong>Uddannelse & Jobs</strong></p>
             <p><strong>Next Albertslund Gymnasium - HTX Design</strong> <br> På HTX gik jeg på design-linjen som senere skiftede navn til create. Rellevante fag jeg har haft er Teknologi A, Teknik A, kommunikation/it c og Design B. I teknologi arbejde vi meget med idegenerering og designthinking. I design arbejdede vi meget med grafisk design og illustrationer. Blandt andet lavede vi rekleme design, tryk og tegnede illustrationer til en historie. Jeg blev student i 2019.</p>
+            <p><strong>Frivillige arbejde</strong> På ældrecenteret i Hvissinge er jeg frivillig. Jeg arbejder med demente og derfor er det vigtigt at lave akvititeter med dem der holder dem rolige og som holder dem igang. På ældrecenteret har jeg et tegnehold der har fokus på at holde de ældre igang på en hyggelig måde der ikke stresser dem. Ældrecenteret har 3 afdelinger der ''deler de demente op'' i 'svært demente'' til ''let demens eller andre sygdomme der tar på hukommelsen''. For de svært demente tegner jeg tegninger i forskellige sværdhedsgrader som de kan farvelægge. Overraskende nok lære jeg omkring målgrupper da jeg skal tænke på hvad de forskellige afdelinger kan klare og hvad de kan lide af motiver for at gøre dem i godt humør.</p>
         </div>
     </section>
 
