--- a/bag-rettet.html
+++ b/bag-rettet.html
@@ -95,7 +95,7 @@
             <div class="B-R-Logo">
 
             </div>
-            <p>I vores gruppe havde vi misforstået opgaven men ud fra den misforståelse lærte jeg en vigtig lektie der hedder at nogle gangen er en kunde ikke altid hel klar i hvad de vil havde så det er vigtigt man stiller en masse spørgsmål og man under vejs viser hvad man har lavet og spørger om det er det kunden går efter. Deruover lærte jeg hvor vigtigt det er at lære ens kongruents stærke og svage sider så man ved hvordan man man kan på ens målgruppe til at vælge dig frem for dem. Interesseret i at se opgaven? Se projektet <a href="https://docs.google.com/document/d/1BTyez6NRr-YCZdTct8LtPdtKOh1OFBt1sHwO5aoAElE/edit?usp=sharing">her</a>.</p>
+            <p>Her er det logo jeg fik lavet til vores firma i opgaven, Khazer. I vores gruppe havde vi misforstået opgaven men ud fra den misforståelse lærte jeg en vigtig lektie der hedder at nogle gangen er en kunde ikke altid hel klar i hvad de vil havde så det er vigtigt man stiller en masse spørgsmål og man under vejs viser hvad man har lavet og spørger om det er det kunden går efter. Deruover lærte jeg hvor vigtigt det er at lære ens kongruents stærke og svage sider så man ved hvordan man man kan på ens målgruppe til at vælge dig frem for dem. Interesseret i at se opgaven? Se projektet <a href="https://docs.google.com/document/d/1BTyez6NRr-YCZdTct8LtPdtKOh1OFBt1sHwO5aoAElE/edit?usp=sharing">her</a>.</p>
         </div>
     </section>
 
