--- a/bag-rettet2.html
+++ b/bag-rettet2.html
@@ -93,7 +93,7 @@
             <div class="Bag-Rettet2-logo">
 
             </div>
-            <p>I dette projekt lærte jeg hvor vigtigt det er at være på de sociale medier og bruge dem når du så har en. At poste ofte og relevante ting så du ikke mister din målgruppe/kundes interesse. interesseret i at se opgaven? se projektet <a href="https://docs.google.com/document/d/1UfoJ17rAKN9wwFBTieGmBh1KLymzLmKG6ugTAXzw2qA/edit?usp=sharing">her</a>.</p>
+            <p>I dette projekt lærte jeg hvor vigtigt det er at være på de sociale medier og bruge dem når du så har en. At poste ofte og relevante ting så du ikke mister din målgruppe/kundes interesse. Her kan i se vores logo for Febi vores nye firma i dette projekt. Derudover kan man nedefor se 2 af de opslag vi havde planlagt på vores content-plan. Interesseret i at se opgaven? se projektet <a href="https://docs.google.com/document/d/1UfoJ17rAKN9wwFBTieGmBh1KLymzLmKG6ugTAXzw2qA/edit?usp=sharing">her</a>.</p>
             <div class="br2s1">
 
             </div>
