--- a/dans.html
+++ b/dans.html
@@ -93,7 +93,7 @@
             <div class="B-R-T2">
 
             </div>
-            <p>I dette projekt lærte jeg at programmer såsom XD er en stor hjælp når man skal kode en hjemmeside da man har et klart overblik over hvad der skal laves.  <br>Interesseret i at se vores opgave? Se opgaven <a href="https://docs.google.com/document/d/1tvDgkBNNDWRswaf3ujVqdkuJWeYzwV4DAOJWR0iUcwo/edit?usp=sharing">her</a>.</p>
+            <p> Her er det mockup jeg lavede projektet. I dette projekt lærte jeg at programmer såsom XD er en stor hjælp når man skal kode en hjemmeside da man har et klart overblik over hvad der skal laves.  <br>Interesseret i at se vores opgave? Se opgaven <a href="https://docs.google.com/document/d/1tvDgkBNNDWRswaf3ujVqdkuJWeYzwV4DAOJWR0iUcwo/edit?usp=sharing">her</a>.</p>
         </div>
     </section>
 
