--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <!-- quote -->
 
     <div class="quote">
-        <img src="./img/bulb.png">
+        <img src="./img/bulb.png" alt="Bulba">
         <div class="quote-tekst">
             <h1>Velkommen</h1>
             <h2>Fantasien vi alle har som børn er den vi i fremtiden bygger vores kreativitet på. Den vildeste fantasi er den der vil have en indflydelse på fremtiden.</h2>
@@ -102,7 +102,7 @@
     <!-- Personlige projekter -->
 
     <section class="pp">
-        <img src="img/skitse dukke.png" alt="personlige projekter">
+        <img src="img/skitsedukke.png" alt="personlige projekter">
         <div>
             <p>Interesseret i at se mine personlige projekter?</p>
             <a href="portfolio-pp.html">
@@ -139,7 +139,7 @@
     <!-- footer -->
 
     <footer class="footer-f">
-        <img class="doodle" src="img/doodle.png">
+        <img class="doodle" src="img/doodle.png" alt="doodle">
         <div class="tekst-footer">
             <div>
                 <p>Email:</p>
