--- a/video.html
+++ b/video.html
@@ -93,7 +93,7 @@
         </div>
         <!-- video -->
         <div class="v-p">
-            <iframe width="371" height="200" src="https://www.youtube.com/embed/lvyisy96bu0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="371" height="200" src="https://www.youtube.com/embed/lvyisy96bu0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
 
